--- a/common/package.json
+++ b/common/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1"
+    "class-validator": "^0.14.1",
+    "@nestjs/mongoose": "^10.0.0",
+    "mongoose": "^7.6.3"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
