--- a/common/package.json
+++ b/common/package.json
@@ -8,14 +8,5 @@
     "build": "tsc",
     "test": "jest"
   },
-  "dependencies": {
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
-    "@nestjs/mongoose": "^10.0.0",
-    "mongoose": "^7.6.3"
-  },
-  "devDependencies": {
-    "@types/node": "^20.11.24",
-    "typescript": "^5.3.3"
-  }
-} 
+  "dependencies": {}
+}
