--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "class-validator": "^0.14.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "@nestjs/mongoose": "^11.0.3",
+    "mongoose": "^8.14.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
