Code refactoring to make the build process 'idempotent'

--- a/apps/gateway/tsconfig.app.json
+++ b/apps/gateway/tsconfig.app.json
@@ -4,9 +4,7 @@
     "outDir": "../../dist/apps/gateway",
     "baseUrl": "./",
     "paths": {
-      "@common/*": ["../../common/*"],
-      "@core/*": ["../../core/*"],
-      "@config/*": ["../../config/*"]
+      "@monorepo/common": ["../../common/src"]
     }
   },
   "include": ["src/**/*"],
